[package]
name = "wtforms"
version = "0.0.1"
authors = ["michael <localhost>"]
description = "A library for form validation and rendering, based on Python WTForms."
documentation = "https://docs.rs/wtforms"
repository = "https://git.mzhang.me/michael/wtforms"
license = "MIT"

[workspace]
members = [ "wtforms-derive" ]

[dependencies]
failure = "0.1.1"
wtforms-derive = { path = "wtforms-derive" }
