[package]
name = "wtforms"
version = "0.1.0"
authors = ["Michael Zhang <iptq@protonmail.com>"]
edition = "2018"

[workspace]
members = [".", "wtforms_derive"]

[dependencies]
wtforms_derive = { version = "0.1", path = "wtforms_derive" }
frunk = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_urlencoded = "0.5"
