[package]
name = "wtforms-derive"
version = "0.0.1"
authors = ["michael <localhost>"]
description = "A library for form validation and rendering, based on Python WTForms."
documentation = "https://docs.rs/wtforms-derive"
repository = "https://git.mzhang.me/michael/wtforms"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
failure = "0.1.1"
syn = { version = "0.14", features = ["extra-traits"] }
quote = "0.6"
proc-macro2 = "0.4"

